fixing button alignment

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -1708,5 +1708,5 @@ header.masthead .container {
     background-position:0px 0px;
 }
 #menu-community li{line-height: 26px;}
-.resource-item .btn-group a{min-width:85px;}
+.resource-item .btn-group a{min-width:95px;}
 .resource-item .btn-group a.btn{text-align: left !important}
